<resources>
    <string name="app_name">Мактаби электронии Тоҷикистон</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Давом додан</string>
    <string name="skip_intro">Гузарондан</string>
    <string name="forgot_password">Паролро фаромӯш кардед?</string>
    <string name="sign_in_text">Воридшави</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Парол</string>
    <string name="sign_in_btn_text">Ворид</string>
    <string name="create_new_account">Сохтани аккаунти нав</string>
    <string name="met"><u>www.met.tj</u></string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
</resources>