<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/skipSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/skip_intro"
            android:textColor="@color/primary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_favicon_edited"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skipSignIn" />

        <TextView
            android:id="@+id/bottom_sheet_body_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in_text"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/email_hint"
            android:textColor="@color/edit_text_text_color"
            android:textColorHint="@color/hint_edit_text_color"
            app:boxStrokeColor="@color/edit_text_border_selected_color"
            app:boxStrokeWidth="0.5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_body_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password_hint"
            android:textColor="@color/edit_text_text_color"
            android:textColorHint="@color/hint_edit_text_color"
            app:boxStrokeColor="@color/edit_text_border_selected_color"
            app:boxStrokeWidth="0.5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/additional_elements_color"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

        <TextView
            android:id="@+id/go_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginBottom="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/additional_elements_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

    <!--<EditText-->
    <!--android:id="@+id/editTextTextEmailAddress"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="50dp"-->
    <!--android:fontFamily="@font/roboto_regular"-->
    <!--android:layout_marginTop="30dp"-->
    <!--android:layout_marginStart="50dp"-->
    <!--android:layout_marginEnd="50dp"-->
    <!--android:theme="@style/EditTextTheme"-->
    <!--android:background="@drawable/custom_edittext_style_authentication"-->
    <!--android:ems="10"-->
    <!--android:textColor="#404040"-->
    <!--android:textColorHint="#B3B8CA"-->
    <!--android:hint="Email"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:padding="10dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

    <!--<EditText-->
    <!--android:id="@+id/editTextTextPassword"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="50dp"-->
    <!--android:textColor="#404040"-->
    <!--android:fontFamily="@font/roboto_regular"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_marginStart="50dp"-->
    <!--android:layout_marginEnd="50dp"-->
    <!--android:background="@drawable/custom_edittext_style_authentication"-->
    <!--android:ems="10"-->
    <!--android:hint="Парол"-->
    <!--android:textColorHint="#B3B8CA"-->
    <!--android:inputType="textPassword"-->
    <!--android:padding="10dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />-->
